fixed what is section scrolling to whitespace issue

--- a/cutie/landingapp/static/css/notmain.css
+++ b/cutie/landingapp/static/css/notmain.css
@@ -162,7 +162,6 @@ a:hover {
 #whatis{
   padding:5% 0% 5% 0%;
   height:auto;
-  width:100vw;
   background: #596e9f;
   z-index: 0;
  } 
